// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > renders 1`] = `
<div>
  <div
    class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
  >
    <h3
      class="banner__title font-[500] bluedot-h3"
    >
      Test Banner
    </h3>
    <form
      class="banner__form flex flex-row items-center justify-center gap-space-between mt-6"
    />
  </div>
</div>
`;

exports[`Banner > renders with input and button 1`] = `
<div>
  <div
    class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
  >
    <h3
      class="banner__title font-[500] bluedot-h3"
    >
      Test Banner
    </h3>
    <form
      class="banner__form flex flex-row items-center justify-center gap-space-between mt-6"
    >
      <input
        class="banner__input p-2 rounded-sm border font-sans text-size-md font-normal text-center w-80"
        placeholder="you@example.com"
        type="text"
        value=""
      />
      <button
        class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark banner__submit-btn"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;
